# blender-morrowind

./: .gitignore  conf.py  index.rst  pyproject.toml  requirements.txt
_static/: Install_950x680.m4v  OpenImage_1280x704.m4v
basics/: exporting.rst  importing.rst
getting-started/: configuring.rst  downloading.rst  installing.rst
tutorials/: basics.rst  texturing.rst
