[tool.poetry]
name = "blender-morrowind-docs"
version = "0.1.0"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
