[tool.poetry]
name = "blender-morrowind-docs"
version = "0.1.0"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]
rstcheck = "^3.5.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
